Fiz a parte que trata de enviar ficheiros. Adaptei essa parte para que possamos também enviar os LOGS/GUIOES por aqui.
Falta encriptar os dados e meter um DH a funcionar.
Falta ligar à parte do jorge.
Falta meter o synchandler operacional.
Falta 1 construtor no logsmanager e um método para serializar essa classe.
Falta decidir como são enviados os guiões.

Amanha continuo a tratar disto, preciso só que alguem trate da logsmanager.
Depois ainda falta a parte de ligar ao server http.

E mais importante, falta testar....de certeza que tem buracos por todo o lado isto.
Falta escrever relatório tambem, entre outras cenas...